[package]
name = "ankr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ankr"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
tui-textarea-2 = { version = "0.11", features = ["crossterm"] }
rusqlite = { version = "0.35", features = ["bundled", "collation"] }
tokio = { version = "1", features = ["full"] }
rs-fsrs = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
html2text = "0.14"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "5"
regex = "1"
once_cell = "1"
image = "0.25"
lru = "0.12"
